Fix ugly stepper background color when using dark mode

--- a/src/app/components/content/app-downloads/downloads.component.scss
+++ b/src/app/components/content/app-downloads/downloads.component.scss
@@ -1,9 +1,4 @@
 .wrapper {
-  @supports (padding: m#{a}x(0px)) {
-    padding-left: m#{a}x(20px, env(safe-area-inset-left));
-    padding-right: m#{a}x(20px, env(safe-area-inset-right));
-  }
-
   .content-header {
     padding-top: 64px;
     height: 74px;
